<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingTop="15dp" >
        <TextView
            android:id="@+id/tvActAbout_appname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkgrey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvActAbout_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/darkgrey"
            android:textSize="16sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="联系地址: 贵州市贵安新区市场监督管理局"
            android:textColor="@color/darkgrey"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_phone_name"
                android:textColor="@color/darkgrey"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvActAbout_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:drawableLeft="@mipmap/dh"
                android:text="@string/about_phone"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_hint"
            android:textColor="@color/darkgrey"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>