<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_search_result_list_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/home_ll_bg"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingTop="5dip">

    <ImageView
        android:id="@+id/iv_creditlevel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@mipmap/a"
        android:contentDescription="@string/credit_level"
        android:scaleType="center"
        android:visibility="gone" />

    <View
        android:layout_width="1dip"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_marginTop="5dip"
        android:background="@color/gray"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="5dip">

        <TextView
            android:id="@+id/tv_zt_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="重庆长安福特汽车生产有限公司"
            android:textColor="@color/buttonblue"
            android:textSize="@dimen/text_size_big" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_zt_address"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="1"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textColor="@color/gray"
                android:text="重庆市北部新区鸳鸯街道XX街12号"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_zt_tel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/dh"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="15699922232"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/ibtn_zt_changepos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:background="@color/white"
        android:contentDescription="@string/changepos"
        android:src="@mipmap/change_pos"
        android:visibility="gone" />

</LinearLayout>
