<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="3dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_search_task_result_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp">


        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="5dip">

            <ImageView
                android:id="@+id/iv_task_timetype"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/credit_level"
                android:scaleType="centerCrop"
                android:background="@mipmap/tsjb_task" />

            <TextView
                android:id="@+id/tv_task_tasktype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/jgtask"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_task_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:layout_marginTop="5dip"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="5dip">

            <TextView
                android:id="@+id/tv_task_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_normal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_tasktype1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taskentity"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_task_entityname"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_tasktype2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taskaddress"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_task_address"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/ibtn_task_changepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:background="@color/white"
            android:contentDescription="@string/changepos"
            android:src="@mipmap/change_pos"
            android:visibility="gone" />
    </LinearLayout>
</android.support.v7.widget.CardView>